--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 packages = [{include = "django_flex_reviews"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-django = "^4.1.4"
+python = "^3.7"
+django = ">=3.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
