use poetry for packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ exclude = .tox,.git,node_modules,venv,.venv,**/templates/**
 
 [isort]
 profile = black
-known_first_party = cookiecutter_niicck_django
+known_first_party = django_flex_reviews
 default_section = THIRDPARTY
 skip=migrations,project_template,node_modules,.git,__pycache__,venv,.venv,.tox
 
@@ -19,21 +19,22 @@ ignore_missing_imports = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
-plugins = mypy_django_plugin.main, mypy_drf_plugin.main
+plugins = mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
-django_settings_module = cookiecutter_niicck_django.settings
+django_settings_module = django_flex_reviews.settings
 
 [mypy-*.migrations.*]
 # Django migrations should not produce any errors:
 ignore_errors = True
 
 [coverage:run]
-include = cookiecutter_niicck_django/*
+include = django_flex_reviews/*,tests/*
 omit =
     *migrations*
-    */test_*.py
-    */fixtures.py
-    */management/*
+
 plugins =
     django_coverage_plugin
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE=tests.sample_app.settings
