--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,47 @@
 [tool.poetry]
 name = "django-flex-reviews"
 version = "0.1.0"
-description = ""
-authors = ["Niicck <niicck@users.noreply.github.com>"]
+description = "Implements a flexible user review schema for your django app."
+authors = ["Nick Ivons <niicck@users.noreply.github.com>"]
+license = "MIT"
 readme = "README.md"
 packages = [{include = "django_flex_reviews"}]
+homepage = "https://github.com/niicck/django-flex-reviews"
+classifiers = [
+    "Development Status :: 1 - Planning",
+    "Environment :: Web Environment",
+    "Intended Audience :: Developers",
+    'Natural Language :: English',
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Framework :: Django",
+    "Framework :: Django :: 3.2",
+    "Framework :: Django :: 4.0",
+    "Framework :: Django :: 4.1",
+    "Framework :: Wagtail",
+    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary"
+]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.8.1"
 django = ">=3.2"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
+pytest = ">=7.2.0"
+pytest-django = "^4.5"
+mypy = "^0.991"
+django-stubs = "^1.13.0"
+ipython = "^8.4"
+black = "^22.12.0"
+isort = "^5.11.4"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
