--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ ipython = "^8.4"
 black = "^22.12.0"
 isort = "^5.11.4"
 flake8 = "^6.0.0"
+factory-boy = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
