--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ warn_unused_configs = True
 plugins = mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
-django_settings_module = django_flex_reviews.settings
+django_settings_module = tests.sample_app.settings
 
 [mypy-*.migrations.*]
 # Django migrations should not produce any errors:
