--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ black = "^22.12.0"
 isort = "^5.11.4"
 flake8 = "^6.0.0"
 factory-boy = "^3.2.1"
+debugpy = "^1.6.5"
 
 [build-system]
 requires = ["poetry-core"]
