create PoetryInstallHelper for noxfile

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,11 @@
 [flake8]
-# E501: Line too long
-# W503: line break before binary operator (superseded by W504 line break after binary operator)
-ignore = E501, W503
+ignore = \
+    # E501: Line too long
+    E501, \
+    # W503: line break before binary operator (superseded by W504 line break after binary operator)
+    W503, \
+    # W605: invalid escape sequence, breaks regex
+    W605
 max-line-length = 88
 extend-ignore = E203
 exclude = .tox,.git,node_modules,venv,.venv,**/templates/**
