--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ ignore = \
     W605
 max-line-length = 88
 extend-ignore = E203
-exclude = .tox,.git,node_modules,venv,.venv,**/templates/**
+exclude = .nox,.git,node_modules,venv,.venv,**/templates/**
 
 [isort]
 profile = black
