clean up noxfile and pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [flake8]
-ignore = \
+ignore =
     # E501: Line too long
-    E501, \
+    E501
     # W503: line break before binary operator (superseded by W504 line break after binary operator)
-    W503, \
+    W503
     # W605: invalid escape sequence, breaks regex
     W605
 max-line-length = 88
 extend-ignore = E203
-exclude = .nox,.git,node_modules,venv,.venv,**/templates/**
+exclude = .nox,.git,node_modules,venv,.venv,**/templates/**,**/migrations/**
 
 [isort]
 profile = black
@@ -17,9 +17,11 @@ default_section = THIRDPARTY
 skip=migrations,project_template,node_modules,.git,__pycache__,venv,.venv,.tox
 
 [mypy]
-python_version = 3.11
+strict = True
 check_untyped_defs = True
-ignore_missing_imports = True
+warn_unreachable = True
+pretty = True
+show_column_numbers = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
@@ -34,11 +36,8 @@ ignore_errors = True
 
 [coverage:run]
 include = django_flex_reviews/*,tests/*
-omit =
-    *migrations*
-
-plugins =
-    django_coverage_plugin
+omit = *migrations*
+plugins = django_coverage_plugin
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE=tests.sample_app.settings
