--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -25,29 +24,31 @@ classifiers = [
     "Framework :: Django :: 3.2",
     "Framework :: Django :: 4.0",
     "Framework :: Django :: 4.1",
-    "Framework :: Wagtail",
-    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary"
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1"
+python = ">=3.8.1,<4"
 django = ">=3.2"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.4"
 debugpy = "^1.6.5"
+nox = "^2022.11.21"
+nox-poetry = "^1.0.2"
 
 [tool.poetry.group.test.dependencies]
-pytest = ">=7.2.0"
+pytest = "^7.2.0"
 pytest-django = "^4.5"
 factory-boy = "^3.2.1"
 
-[tool.poetry.group.lint.dependencies]
-mypy = "^0.991"
+[tool.poetry.group.mypy.dependencies]
+mypy = "^1.0.0"
 django-stubs = "^1.13.0"
-black = "^22.12.0"
-isort = "^5.11.4"
-flake8 = "^6.0.0"
+
+[tool.poetry.group.safety.dependencies]
+# pinned until conflict with black is fixed
+# https://github.com/pyupio/safety/issues/455
+safety = "==2.3.4"
 
 [build-system]
 requires = ["poetry-core"]
