--- a/setup.cfg
+++ b/setup.cfg
@@ -35,9 +35,12 @@ django_settings_module = tests.sample_app.settings
 ignore_errors = True
 
 [coverage:run]
-include = django_flex_reviews/*,tests/*
+branch = true
+source = django_flex_reviews
 omit = *migrations*
-plugins = django_coverage_plugin
+
+[coverage:report]
+show_missing = true
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE=tests.sample_app.settings
