pass linting and mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,8 @@ ignore =
     W503
     # W605: invalid escape sequence, breaks regex
     W605
+    # S101: Use of assert detected.
+    S101
 max-line-length = 88
 extend-ignore = E203
 exclude = .nox,.git,node_modules,venv,.venv,**/templates/**,**/migrations/**
@@ -25,13 +27,18 @@ show_column_numbers = True
 warn_unused_ignores = True
 warn_redundant_casts = True
 warn_unused_configs = True
-plugins = mypy_django_plugin.main
+plugins =
+    mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
 django_settings_module = tests.sample_app.settings
 
 [mypy-*.migrations.*]
-# Django migrations should not produce any errors:
+# Django migrations should not produce any errors
+ignore_errors = True
+
+[mypy-tests.factories]
+# factory-boy does not support typing yet
 ignore_errors = True
 
 [coverage:run]
