--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,8 +21,8 @@ repos:
         additional_dependencies:
           - flake8-bandit
           - flake8-bugbear
-          - flake8-docstrings
           - pep8-naming
+          - flake8-django
         require_serial: true
 
   - repo: https://github.com/PyCQA/isort
