--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,11 +43,11 @@ factory-boy = "^3.2.1"
 coverage = "^7.1.0"
 
 [tool.poetry.group.mypy.dependencies]
-mypy = "^1.0.0"
-django-stubs = "^1.13.0"
+mypy = "^0.991"
+django-stubs = "^1.14.0"
 
 [tool.poetry.group.safety.dependencies]
-# pinned until conflict with black is fixed
+# pinned until conflict with packaging is fixed
 # https://github.com/pyupio/safety/issues/455
 safety = "==2.3.4"
 
