--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4"
 django = ">=3.2"
+django-stubs-ext = ">=0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.4"
