--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,10 +30,12 @@ classifiers = [
 python = ">=3.8.1,<4"
 django = ">=3.2"
 django-stubs-ext = ">=0.7.0"
+django-vite = "^2.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.4"
 debugpy = "^1.6.5"
+django-environ = "^0.9.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
