--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     hooks:
       - id: isort
         require_serial: true
-        args: ["--filter-files"]
+        args: ['--filter-files']
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
@@ -38,7 +38,13 @@ repos:
       - id: pyupgrade
         args: [--py37-plus]
 
+  - repo: https://github.com/rtts/djhtml
+    rev: v2.0.0
+    hooks:
+      - id: djhtml
+
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.6.0
+    rev: v2.7.1
     hooks:
       - id: prettier
+        types_or: [css, scss, javascript, ts, tsx, json, yaml]
