--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "cross-env TAILWIND_MODE=watch vite -d",
-    "build": "tsc && cross-env TAILWIND_MODE=build vite build",
+    "build": "cross-env TAILWIND_MODE=build vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
