--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,9 @@ plugins =
 [mypy.plugins.django-stubs]
 django_settings_module = tests.sample_app.settings
 
+[mypy-environ]
+ignore_missing_imports = true
+
 [mypy-*.migrations.*]
 # Django migrations should not produce any errors
 ignore_errors = True
