--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,13 @@ django-stubs-ext = ">=0.7.0"
 django-vite = "^2.0.2"
 django-widget-tweaks = "^1.4.12"
 
+# Dependencies required to run app locally.
 [tool.poetry.group.dev.dependencies]
+django-environ = "^0.9.0"
+
+[tool.poetry.group.debug.dependencies]
 ipython = "^8.4"
 debugpy = "^1.6.5"
-django-environ = "^0.9.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
