--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: check-added-large-files
+        exclude: tests/fixtures/books.py
       - id: check-yaml
       - id: check-toml
       - id: end-of-file-fixer
