--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ django-widget-tweaks = "^1.4.12"
 [tool.poetry.group.dev.dependencies]
 django-environ = "^0.9.0"
 beautifulsoup4 = "^4.11.2"
+pydantic = "^1.10.5"
 
 [tool.poetry.group.debug.dependencies]
 ipython = "^8.4"
