--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.8.3",
+    "@algolia/autocomplete-theme-classic": "^1.8.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
