--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@algolia/autocomplete-theme-classic": "^1.8.3",
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.16",
+    "pinia": "^2.0.33",
     "vue": "^3.2.47"
   },
   "devDependencies": {
