toggle 'required' attributes on hidden MediaType and Strategy form fields

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
+    "lib": ["dom", "es2015", "es2017"],
     "moduleResolution": "Node",
     "strict": true,
     "resolveJsonModule": true,
