--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,10 @@ indent_style = space
 indent_size = 2
 max_line_length = 88
 
+[Makefile]
+indent_style = tab
+indent_size = 2
+
 [*.{html,py,pyi}]
 indent_style = space
 indent_size = 4
