--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "cross-env TAILWIND_MODE=watch vite -d",
     "build": "cross-env TAILWIND_MODE=build vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "jest": "jest"
   },
   "dependencies": {
     "@algolia/autocomplete-js": "^1.8.3",
@@ -21,13 +22,20 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/jest": "^29.5.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "jest": "^29.5.0",
+    "jest-puppeteer": "^8.0.5",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-simple-vars": "^7.0.1",
+    "puppeteer": "^19.7.5",
     "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   },
@@ -90,5 +98,10 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "all"
+  },
+  "jest-puppeteer": {
+    "launch": {
+      "devtools": false
+    }
   }
 }
