--- a/tools/.env-sample
+++ b/tools/.env-sample
@@ -1,3 +1,5 @@
+SECRET_KEY=test-dummy
+DJANGO_RUNSERVER_PORT=8000
 DJANGO_VITE_ASSETS_PATH=./dist/static
 DJANGO_VITE_DEV_MODE=true
-SECRET_KEY=test-dummy
+DJANGO_VITE_DEV_SERVER_PORT=5173
