supergood-review-site

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ exclude = .nox,.git,node_modules,venv,.venv,**/templates/**,**/migrations/**
 
 [isort]
 profile = black
-known_first_party = django_flex_reviews
+known_first_party = supergood_review_site
 default_section = THIRDPARTY
 skip=migrations,project_template,node_modules,.git,__pycache__,venv,.venv,.tox
 
@@ -46,7 +46,7 @@ ignore_errors = True
 
 [coverage:run]
 branch = true
-source = django_flex_reviews
+source = supergood_review_site
 omit = *migrations*
 
 [coverage:report]
