--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Implements a flexible user review schema for your django app."
 authors = ["Nick Ivons <niicck@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "django_flex_reviews"}]
+packages = [{include = "supergood_review_site"}]
 homepage = "https://github.com/niicck/django-flex-reviews"
 classifiers = [
     "Development Status :: 1 - Planning",
@@ -38,9 +38,10 @@ django-widget-tweaks = "^1.4.12"
 django-environ = "^0.9.0"
 beautifulsoup4 = "^4.11.2"
 pydantic = "^1.10.5"
+ipython = "^8.4"
+django-extensions = "^3.2.1"
 
 [tool.poetry.group.debug.dependencies]
-ipython = "^8.4"
 debugpy = "^1.6.5"
 
 [tool.poetry.group.test.dependencies]
