--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ coverage = "^7.1.0"
 [tool.poetry.group.mypy.dependencies]
 mypy = "^0.991"
 django-stubs = "^1.14.0"
+types-beautifulsoup4 = "^4.12.0.5"
 
 [tool.poetry.group.safety.dependencies]
 # pinned until conflict with packaging is fixed
