--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,9 @@ ignore_errors = True
 # factory-boy does not support typing yet
 ignore_errors = True
 
+[mypy-queryset_sequence]
+ignore_missing_imports = true
+
 [coverage:run]
 branch = true
 source = supergood_review_site
