--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4"
 django = ">=3.2"
-django-stubs-ext = ">=0.7.0"
+django-stubs-ext = "^4.2.2"
 django-vite = "^2.0.2"
 django-widget-tweaks = "^1.4.12"
 django-querysetsequence = "^0.17"
@@ -55,8 +55,7 @@ beautifulsoup4 = "^4.12.2"
 coverage = "^7.1.0"
 
 [tool.poetry.group.mypy.dependencies]
-mypy = "^0.991"
-django-stubs = "^1.14.0"
+mypy = "^1.4.1"
 types-beautifulsoup4 = "^4.12.0.5"
 
 [tool.poetry.group.safety.dependencies]
