--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ exclude = .nox,.git,node_modules,venv,.venv,**/templates/**,**/migrations/**
 
 [isort]
 profile = black
-known_first_party = supergood_review_site
+known_first_party = supergood_reads
 default_section = THIRDPARTY
 skip=migrations,project_template,node_modules,.git,__pycache__,venv,.venv,.tox
 
@@ -49,7 +49,7 @@ ignore_missing_imports = true
 
 [coverage:run]
 branch = true
-source = supergood_review_site
+source = supergood_reads
 omit = *migrations*
 
 [coverage:report]
