--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,8 +48,7 @@ repos:
     rev: v8.34.0
     hooks:
       - id: eslint
-        types: [file]
-        types_or: [javascript, jsx, ts, tsx, vue]
+        files: \.(js|jsx|ts|tsx|vue)$
         args: ['--fix']
         additional_dependencies:
           - eslint@v8.34.0
