fix race conditions in Media Search bar

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ warn_redundant_casts = True
 warn_unused_configs = True
 plugins =
     mypy_django_plugin.main
+disallow_subclassing_any = False
 
 [mypy.plugins.django-stubs]
 django_settings_module = tests.sample_app.settings
@@ -45,6 +46,9 @@ ignore_errors = True
 ignore_errors = True
 
 [mypy-queryset_sequence]
+ignore_missing_imports = true
+
+[mypy-rest_framework.*]
 ignore_missing_imports = true
 
 [coverage:run]
