--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.16",
     "axios": "^1.3.4",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "vue": "^3.2.47"
   },
@@ -23,6 +24,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.197",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
@@ -36,7 +38,7 @@
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
+    "typescript": "^5.1.6",
     "vite": "^4.1.0"
   },
   "eslintConfig": {
