--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,12 @@
     "noImplicitReturns": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "allowImportingTsExtensions": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["supergood_reads/*"]
+      "@/*": ["supergood_reads/static/*"]
     }
   },
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts"],
+  "include": ["supergood_reads/static"]
 }
