create vue_field_interface to make vue form field components easier to use

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,6 +48,7 @@ repos:
     rev: v8.34.0
     hooks:
       - id: eslint
+        types: [file]
         files: \.(js|jsx|ts|tsx|vue)$
         args: ['--fix']
         additional_dependencies:
