--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,7 @@ django = ">=3.2"
 django-stubs-ext = ">=4.2.2"
 django-vite = ">=2.0.2"
 django-widget-tweaks = ">=1.4.12"
-django-querysetsequence = ">=0.17"
-djangorestframework = "^3.14.0"
+djangorestframework = ">=3.14.0"
 
 [tool.poetry.group.dev.dependencies]
 # Dependencies required to run app locally.
