--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.16",
+    "@vuepic/vue-datepicker": "^6.0.2",
     "axios": "^1.3.4",
     "lodash": "^4.17.21",
     "pinia": "^2.0.33",
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
