add new Rating Strategies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "django-flex-reviews"
+name = "supergood-reads"
 version = "0.1.0"
 description = "Implements a flexible user review schema for your django app."
 authors = ["Nick Ivons <niicck@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "supergood_reads"}]
-homepage = "https://github.com/niicck/django-flex-reviews"
+homepage = "https://github.com/niicck/supergood-reads"
 classifiers = [
     "Development Status :: 1 - Planning",
     "Environment :: Web Environment",
