--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ ignore =
 max-line-length = 88
 extend-ignore = E203
 exclude = .nox,.git,node_modules,venv,.venv,**/templates/**,**/migrations/**
+per-file-ignores =
+  demo/settings/*.py: F401,F403,F405,S104
 
 [isort]
 profile = black
@@ -32,7 +34,7 @@ plugins =
 disallow_subclassing_any = False
 
 [mypy.plugins.django-stubs]
-django_settings_module = tests.sample_app.settings
+django_settings_module = demo.settings.test
 
 [mypy-environ]
 ignore_missing_imports = true
@@ -58,7 +60,3 @@ omit = *migrations*
 
 [coverage:report]
 show_missing = true
-
-[tool:pytest]
-DJANGO_SETTINGS_MODULE=tests.sample_app.settings
-norecursedirs=tests/tests/frontend/*
