--- a/tools/.env-sample
+++ b/tools/.env-sample
@@ -6,3 +6,4 @@ DJANGO_VITE_DEV_MODE=true
 DJANGO_VITE_DEV_SERVER_PORT=5173
 
 SUPERGOOD_READS_PACKAGE_NAME="supergood_reads"
+DJANGO_CONFIGURATION="Sqlite"
