--- a/tools/.env-sample
+++ b/tools/.env-sample
@@ -1,9 +1,6 @@
-SECRET_KEY=test-dummy
+SECRET_KEY=changeme
 DJANGO_RUNSERVER_PORT=8000
+DEBUG=true
 
-DJANGO_VITE_ASSETS_PATH=./supergood_reads/static/dist
 DJANGO_VITE_DEV_MODE=true
 DJANGO_VITE_DEV_SERVER_PORT=5173
-
-SUPERGOOD_READS_PACKAGE_NAME="supergood_reads"
-DJANGO_CONFIGURATION="Sqlite"
