--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,6 @@ max_line_length = 88
 indent_style = tab
 indent_size = 2
 
-[*.{html,py,pyi}]
+[*.{html,py,pyi,sh}]
 indent_style = space
 indent_size = 4
