--- a/deploy/docker/compose/docker-compose.yml
+++ b/deploy/docker/compose/docker-compose.yml
@@ -16,18 +16,18 @@ services:
     environment:
       - DJANGO_PORT
       - DJANGO_HOST
-      - POSTGRES_DB
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-      - POSTGRES_HOST
-      - POSTGRES_PORT
+      - DATABASE_ENGINE=django.db.backends.postgresql
+      - DATABASE_NAME=${POSTGRES_DB}
+      - DATABASE_USER=${POSTGRES_USER}
+      - DATABASE_PASSWORD=${POSTGRES_PASSWORD}
+      - DATABASE_HOST=${POSTGRES_HOST}
+      - DATABASE_PORT=${POSTGRES_PORT}
       - DEBUG
       - SECRET_KEY
-      - DJANGO_CONFIGURATION
-    image: ${APP_DOCKER_TAG}
+    image: '${COMPOSE_PROJECT_NAME}-app:${DOCKER_APP_IMAGE_TAG:-local-latest}'
     build:
       context: ../../..
-      dockerfile: ./docker/images/django/django.Dockerfile
+      dockerfile: ./deploy/docker/images/django/django.Dockerfile
       args:
         APP_HOME: ${APP_HOME}
     ports:
@@ -36,17 +36,3 @@ services:
       - db
     links:
       - db:postgres
-
-  # The "vite" service is responsible for static asset compilation.
-  vite:
-    environment:
-      - DJANGO_VITE_DEV_SERVER_PORT
-    build:
-      context: ../../..
-      dockerfile: ./demo/docker/images/vite/vite.Dockerfile
-      args:
-        APP_HOME: ${APP_HOME}
-    tty: true
-    volumes:
-      - '../../../vite.config.js:${APP_HOME}/vite.config.js'
-      - '../../../supergood_reads:${APP_HOME}/supergood_reads'
