--- a/tools/.env-sample
+++ b/tools/.env-sample
@@ -1,6 +1,24 @@
-SECRET_KEY=changeme
-DJANGO_RUNSERVER_PORT=8000
-DEBUG=true
+# Docker
+APP_HOME=/app
+COMPOSE_PROJECT_NAME=supergood_reads_demo
+DOCKER_TAG_APP=local-latest
 
+# Postgres
+POSTGRES_DB=supergood
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=CHANGE_ME
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+
+# Django
+DJANGO_PORT=80
+DJANGO_HOST=0.0.0.0
+DEBUG=true
+SECRET_KEY=CHANGE_ME
+
+# Local
+DEBUGPY_PORT=5678
+DEBUGPY_PORT_PYTEST=56789
 DJANGO_VITE_DEV_MODE=true
+DJANGO_VITE_DEV_SERVER_HOST=0.0.0.0
 DJANGO_VITE_DEV_SERVER_PORT=5173
