build production image

--- a/tools/.env-sample
+++ b/tools/.env-sample
@@ -2,6 +2,8 @@
 APP_HOME=/app
 COMPOSE_PROJECT_NAME=supergood_reads_demo
 DOCKER_TAG_APP=local-latest
+DOCKER_HUB_REPO=niicck/supergood_reads_demo
+DOCKER_HUB_TOKEN=
 
 # Postgres
 POSTGRES_DB=supergood
