--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ django-configurations = "^2.4.1"
 ipython = "^8.4"
 django-extensions = "^3.2.1"
 psycopg2 = "^2.9.7"
+dj-database-url = "^2.1.0"
+gunicorn = "^21.2.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
