--- a/tools/.env-sample
+++ b/tools/.env-sample
@@ -13,8 +13,8 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
 # Django
-DJANGO_PORT=80
-DJANGO_HOST=0.0.0.0
+PORT=80
+HOST=0.0.0.0
 DEBUG=true
 SECRET_KEY=CHANGE_ME
 
