run production image locally

--- a/deploy/docker/compose/docker-compose.local.yml
+++ b/deploy/docker/compose/docker-compose.local.yml
@@ -11,6 +11,8 @@ services:
       - DJANGO_VITE_DEV_SERVER_HOST
     build:
       target: local
+      args:
+        - REQUIREMENTS_FILE=dev.txt
     ports:
       - '${DEBUGPY_PORT}:${DEBUGPY_PORT}'
     links:
