--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pytest = "^7.2.0"
 pytest-django = "^4.5"
 factory-boy = "^3.2.1"
 beautifulsoup4 = "^4.12.2"
+whitenoise = {extras = ["brotli"], version = "^6.5.0"}
 
 [tool.poetry.group.coverage.dependencies]
 coverage = "^7.1.0"
